--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -24,4 +24,4 @@ jobs:
           HOMEBREW_DEVELOPER: 1
           HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          brew bump --tap ${{ github.repository }} --open-pr --no-fork
+          brew bump --tap ${{ github.repository }} --open-pr --no-fork --commit-message="chore: bump {{package_name}} to {{version}}"
